--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 BASE_URL_IMAGES = http://localhost:4000
 
-mongo_connection_url= mongodb://127.0.0.1:27017/Shopping
+mongo_connection_url= mongodb+srv://Sufyan:Sufyan@atlascluster.nme3krq.mongodb.net/Shopping
+
+
 JWT_SECRET=your-very-secure-secret-key
