--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ BASE_URL_IMAGES = http://localhost:4000
 
 mongo_connection_url= mongodb+srv://Sufyan:Sufyan@atlascluster.nme3krq.mongodb.net/Shopping
 
+PORT=3000
 
 JWT_SECRET=your-very-secure-secret-key
